added high score draft

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Code Quiz</title>
-    <link rel="stylesheet" href="./assets/CSS/style.css"
+    <link rel="stylesheet" href="./assets/CSS/style.css">
 </head>
 
 <body>
@@ -25,13 +25,19 @@
                     <option value="opt3">Opt3</option>
                 </select>
             </div !-->
-            <div class="form-group">
+            <div class="container">
+                <h1 class="welcome">Are you ready to take the Code Quiz?</h1>
+                <button id="start">Start</button>
+                <h2 id="countdown"></h2>
+                <p id="main"></p>
+              </div>
+            <!--div class="form-group">
                 <button class="btn" id="save-task" type="submit" draggable="true">Start the Quiz!</button>
-            </div>
+            </div !-->
         </form>
     </header>
 
-    <main class="page-content" id="page-content">
+    <!--main class="page-content" id="page-content" !-->
         <!--Task To Do -->
         <!--section class="task-list-wrapper">
             <h2 class="list-title">Tasks To Do</h2>
@@ -48,7 +54,7 @@
             <ul class="task-list" id="tasks-completed"></ul>
         </section !-->
 
-    </main>
+    <!--/main !--> 
 
     <!--footer>
         &copy;2020 by Taskinator
