--- a/score.html
+++ b/score.html
@@ -10,12 +10,14 @@
 </head>
 
 <body>
-    <header>
-        <h1 class="page-title">Highest Score</h1>
-        <p>High Scores:</p>
-    </header>
-
-
+    <main class="scores" id="highScores"></main>
+    <script src="./js/score.js"></script>
+    <script>
+        showHScores('highScores');
+    </script>
+    <footer>
+        <a href="index.html">Return to Quiz</a>
+    </footer>
 </body>
 
 </html>
